# kanji-up-recognition-web

./: CMakeLists.txt  README.md  conanfile.txt  kanji_recognition.cpp
